# Batitong

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  GUI_MCP_DJANGO_ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  kali_mcp_server.py  pyproject.toml
.agents/skills/testing-batitong/: SKILL.md
.agents/skills/testing-gui/: SKILL.md
.github/workflows/: ci.yml
Scripts/: advanced_exploitation_framework.py  comprehensive_pentest_report.py  hybrid_orchestrator.py  payload_generator.py  translate_attack_stix.py
docker/django/: Dockerfile  entrypoint.sh
docker/hexstrike/: Dockerfile
docker/kali-mcp/: Dockerfile
docker/ollama/: Dockerfile  pull-models.sh
gui/: manage.py
gui/apps/accounts/: admin.py  decorators.py  middleware.py  models.py  views.py
gui/apps/approvals/: admin.py  apps.py  consumers.py  models.py  routing.py  services.py  urls.py  views.py
gui/apps/credentials/: admin.py  apps.py  crypto.py  forms.py  models.py  seed.py  services.py  urls.py  views.py
gui/apps/engagements/: admin.py  apps.py  consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
gui/apps/llm/: admin.py  apps.py  consumers.py  forms.py  models.py  prompts.py  router.py  routing.py  tasks.py  tool_calling.py  tracing.py  urls.py  views.py
gui/apps/mcp/: admin.py  apps.py  models.py  services.py  urls.py  views.py
gui/apps/mitre/: admin.py  apps.py  models.py  services.py  urls.py  views.py
gui/apps/playbooks/: admin.py  apps.py  forms.py  models.py  runner.py  signals.py  tasks.py  templating.py  urls.py  views.py
gui/apps/targets/: admin.py  apps.py  models.py  urls.py  views.py
gui/apps/ui/: apps.py  ratelimit.py  (+4 more)
gui/config/: asgi.py  celery.py  urls.py  wsgi.py
gui/templates/: base.html
gui/tests/: conftest.py  test_approvals.py  test_credentials.py  test_llm_router.py  test_llm_tool_calling.py  test_llm_tracing.py  test_mcp_clients.py  test_mcp_views.py  test_phase2b_playbooks.py  test_phase2c_ratelimit.py  test_phase2c_ui.py  test_phase2c_ws_ratelimit.py  test_phase2d_admin.py  test_phase2d_roles.py  test_phase2d_sidebar.py  test_sync.py  test_views.py
hexstrike-ai/: ASM_REPORT.md  hexstrike_server.py  phase1_report.md
(+74 files in other folders)
